...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSunriseSunsetlookup"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDeezerSongSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/Deezer_Song"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnDictionary"
...
