<resources>

    <string name="help_title">Using Guide</string>
    <string name="help_message">Here\'s how to use this app:\n\n1. Enter the name of the artist in the search field.\n2. Click the "Search" button to find songs by the artist.\n3. Tap on a song to see more details about it.\n4. Press the "Add to Favorites" button to save the song to your favorites list.\n5. Access the menu to navigate through the app.\n6. In the Favorites list, click on a song to 
    <string name="search_button_text">Search</string>
    <string name="Click_text">Click</string>
    <string name="search_guide_text">Please enter artist here</string>
    <string name="album_name_text">Album Name</string>
    <string name="favorite_text">Add to favorite</string>
    <string name="go_back_search_text">Go back to search</string>
    <string name="title_text">Title</string>
    <string name="duration_text">Duration in sec</string>
    <string name="delete_text">Delete</string>
    <string name="favorite_list_text">FAVORITE LIST</string>
    <string name="Deezer_song_search_text">Deezer song search</string>
    <string name="error_artist">No artists found</string>
    <string name="error_fetch_data_text">Error fetching data</string>
    <string name="add_favorite_text">Added to Favorite List</string>
    <string name="close_text">Close</string>
    <string name="error_parsing_tracklist">Error parsing tracklist</string>
    <string name="error_fetch_tracklist">Error fetching tracklist</string>
...
